updated commands to brigadier & reworked stats