@@ -22,9 +22,9 @@ public class CPlayer extends CEntity {
     public CPlayer(PlayerData data) {
         super(
                 new EntityActionBar(
-                        data.stats.health,
-                        data.stats.defense,
-                        data.stats.mana
+                    new Stat.StatBar(Stat.Health, data.stats.health),
+                    new Stat.StatBar(Stat.Defense, data.stats.defense),
+                    new Stat.StatBar(Stat.Mana, data.stats.mana)
                 ),
                 data.inv,
                 data.stats,
@@ -44,25 +44,30 @@ public class CPlayer extends CEntity {
         this.actionBar = actionBar;
     }
     public static CPlayer newPlayer(Player p) {
-        ArrayList<Stat> statsList = (ArrayList<Stat>) Stream
-                .of(GenericStat.values())
-                .map(Stat::fromGeneric)
-                .collect(Collectors.toList());
+        var statsList = (ArrayList<Double>) Stream
+            .of(Stat.values())
+            .map(Stat::defaultValue)
+            .map(x -> x.value)
+            .toList();
         p.getAttribute(Attribute.GENERIC_MAX_HEALTH).setBaseValue(100);
         p.setHealth(100);
 
         EntityStats stats = new EntityStats(
-                (Damage) statsList.get(PlayerInvUpdate.DAMAGE),
-                (Strength) statsList.get(PlayerInvUpdate.STRENGTH),
-                (CritDamage) statsList.get(PlayerInvUpdate.CRITDAMAGE),
-                (CritChance) statsList.get(PlayerInvUpdate.CRITCHANCE),
-                (Health) statsList.get(PlayerInvUpdate.HEALTH),
-                (Defense) statsList.get(PlayerInvUpdate.DEFENSE),
-                (Mana) statsList.get(PlayerInvUpdate.MANA)
+            statsList.get(PlayerInvUpdate.DAMAGE),
+            statsList.get(PlayerInvUpdate.STRENGTH),
+            statsList.get(PlayerInvUpdate.CRITDAMAGE),
+            statsList.get(PlayerInvUpdate.CRITCHANCE),
+            statsList.get(PlayerInvUpdate.HEALTH),
+            statsList.get(PlayerInvUpdate.DEFENSE),
+            statsList.get(PlayerInvUpdate.MANA),
+            statsList.get(PlayerInvUpdate.HEALTH_REGEN),
+            statsList.get(PlayerInvUpdate.MANA_REGEN)
         );
 
         EntityActionBar actionBar = new EntityActionBar(
-                stats.health, stats.defense, stats.mana
+            new Stat.StatBar(Stat.Health, stats.health),
+            new Stat.StatBar(Stat.Defense, stats.defense),
+            new Stat.StatBar(Stat.Mana, stats.mana)
         );
 
         return new CPlayer(p, new RawEntity(p.getUniqueId()), stats, new EntityInventory(), actionBar);
